# ros2_ws_test

./: .gitignore  README.md  backup_main_local_changes_before_ebm_test.patch  baseline_config.md  experiment_results_robot0.csv  run_experiments.sh  run_rviz_relaunch_batches.py
DyObAv_MPCnEBM_Warehouse/: .gitignore  LICENSE  README.md  requirements.txt
DyObAv_MPCnEBM_Warehouse/Demo/: zos_2_mpc_None.avi
DyObAv_MPCnEBM_Warehouse/config/: mpc_fast.yaml  rpp.yaml  scud_1t20_poselu_enll_test.yaml  spec_human.yaml  spec_robot.yaml  teb.yaml  wsd_1t20_none_bce_train.yaml  wsd_1t20_none_kld_train.yaml  wsd_1t20_none_nll_train.yaml  wsd_1t20_poselu_enll_train.yaml  zpd_1t20_none_bce_train.yaml  zpd_1t20_none_kld_train.yaml
DyObAv_MPCnEBM_Warehouse/doc/: README.md  robot_results_demo.json  s1_bce_results.json  s1_cvm_results.json  s1_ebm_results.json  s1_kld_results.json  s1_sgan_results.json  s1_teb_results.json  s2_bce_results.json  s2_cvm_results.json  s2_ebm_results.json  s2_kld_results.json  s2_rpp_results.json  s2_sgan_results.json  s2_teb_results.json
DyObAv_MPCnEBM_Warehouse/install/: setup.sh  (+1 more)
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: CODEX_PROMPT_INSTALL_EBM_RANDOM_SCENES.md  README_EBM_RANDOM_SCENE_PACKAGE.md  package_ebm_random_warehouse_scene.py  run_100_trials.py  run_rviz_relaunch_batches.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_ros_actor_pose_plugin/: CMakeLists.txt  package.xml
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_ros_actor_pose_plugin/include/gazebo_ros_actor_pose_plugin/: gazebo_ros_actor_pose.h
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_ros_actor_pose_plugin/src/: gazebo_ros_actor_pose.cpp  gazebo_ros_actor_pose_single.txt
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/: CMakeLists.txt  CMakeLists.txt.save  README.md  colcon.pkg  package.xml
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/launch/: arena_hospital_small.launch.py  hospital.launch.py  small_warehouse.launch.py  warehouse_camera.launch.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/maps/hospital/: map.pgm  map.yaml
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/models/aws_models_hospital/: model.config
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/models/aws_models_hospital/aws_robomaker_residential_PortraitA_01/meshes/: aws_PortraitA_01_visual.DAE
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/models/aws_models_hospital/aws_robomaker_residential_PortraitA_02/meshes/: aws_PortraitA_01_visual.DAE
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/models/aws_models_hospital/aws_robomaker_residential_PortraitB_01/meshes/: aws_PortraitB_01_visual.DAE
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/models/aws_models_hospital/aws_robomaker_residential_PortraitB_02/meshes/: aws_PortraitB_01_visual.DAE
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/models/aws_models_hospital/aws_robomaker_residential_PortraitB_03/meshes/: aws_PortraitB_01_visual.DAE
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/models/aws_models_hospital/aws_robomaker_residential_PortraitC_01/meshes/: aws_PortraitC_01_visual.DAE
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/models/aws_models_hospital/aws_robomaker_residential_PortraitD_01/meshes/: aws_PortraitD_01_visual.DAE
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/scripts/: random_actor_respawner.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/src/: actor_entity_spawner_plugin.cpp  random_actor_offset_plugin.cpp
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/gazebo_worlds/worlds/aws/: arena_hospital_small copy.world  arena_hospital_small.world  hospital.world  small_warehouse.world  small_warehouse_2.world  small_warehouse_2_c3.world  small_warehouse_2_c3_gap2.world  small_warehouse_2_c3_gap4.world  small_warehouse_3.world  warehouse_camera.world  warehouse_s3_walker.txt
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_description/: package.xml  setup.cfg  setup.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_description/data/: test_map.json  warehouse_map_real.json  zospital_map.json
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_description/launch/: gazebo_map.launch.py  geo_map.launch.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_description/map_description/: geometric_map_node.py  geometry_plain.py  map_geometric.py  map_occupancy.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_description/model/test_map/: model.config  model.sdf
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_description/rviz/: default_setting.rviz
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_description/script/: json_to_sdf.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_description/worlds/: test_map.world
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_interfaces/: CMakeLists.txt
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/map_interfaces/msg/: ObjectMotionType.msg  ObjectShapeType.msg  PolygonObject.msg  PolygonObjectArray.msg  PolygonObjectArrayStamped.msg  PolygonObjectStamped.msg
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/mps_motion_plan/: package.xml  setup.cfg  setup.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/mps_motion_plan/data/: test_graph.json  test_schedule.csv  warehouse_graph.json  warehouse_img_graph.json  warehouse_schedule.csv  warehouse_schedule_dual.csv  zospital_graph.json  zospital_schedule.csv
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/mps_motion_plan/launch/: motion_plan.launch.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/mps_motion_plan/mps_motion_plan/: _ref_traj_generation.py  global_path_coordinate.py  global_path_coordinate_node.py  local_traj_plan.py  schedule_visualize_node.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/mps_motion_plan/mps_motion_plan/basic_components/: geometry_plain.py  graph.py  map_geometric.py
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/mps_motion_plan/rviz/: default_setting.rviz
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/zmr_interfaces/: CMakeLists.txt  package.xml
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/zmr_interfaces/msg/: CurrentFutureStates.msg
src/DyObAv-MPCnEBM-Warehouse-ROS2/src/zmr_interfaces/srv/: GetOtherRobotStates.srv  GetRobotState.srv
wandb/: latest-run
(+2244 files in other folders)
