<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_worlds</name>
  <version>0.0.0</version>
  <description>Gazebo worlds</description>
  <maintainer email="michael@todo.todo">michael</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo</depend>
  <depend>gazebo_msgs</depend>
  <depend>rclcpp</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>map_description</exec_depend>
  <exec_depend>mps_motion_plan</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
