<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_description</name>
  <version>0.0.0</version>
  <description>Read pre-defined map and publish it to a certain type of map topic</description>
  <maintainer email="zhze.zhang@gmail.com">ze</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_mypy</test_depend>

  <depend>python3-shapely</depend>

  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>map_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
