<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mps_motion_plan</name>
  <version>0.0.0</version>
  <description>Generate reference path and trajectory given a schedule.</description>
  <maintainer email="zhze.zhang@gmail.com">ze</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>python3-networkx</depend>
  <depend>python-scipy</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>mps_interfaces</exec_depend>
  <exec_depend>map_interfaces</exec_depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
